--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </div>
 
                     <figure class="testimony_picture">
-                        <img src="images/.jpg" class="testimony_img">
+                        <img src="images/hnoClaudioJV.jpg" class="testimony_img">
                     </figure>
                 </section>
 
