--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="testimony_text">
                         <h2 class="subtitle">Hermana Elisa Jara. <span class="testimony_course">Colaboradora de MEEC</span></h2>
                         <p class="testimony_review">Hermana dispuesta como colaboradora dentro de los servicios MEEC para predicar la palabra de Dios</p>
-                        <a href="/test/test5.html" class="cta">Ver Mas</a>
+                        <a href="test/test5.html" class="cta">Ver Mas</a>
                     </div>
 
                     <figure class="testimony_picture">
