--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@
                     </figure>
                 </section>
 
+                <section class="testimony_body" data-id="10">
+                    <div class="testimony_text">
+                        <h2 class="subtitle">Hermana Zoila Jofre.<span class="testimony_course">Colaboradora de MEEC</span></h2>
+                        <p class="testimony_review">Hermana dispuesta como colaboradora dentro de los servicios MEEC para predicar la palabra de Dios, enlace interno de Liceo MAZZ</p>
+                        <a href="test/test10.html" class="cta">Ver Mas</a>
+                    </div>
+
+                    <figure class="testimony_picture">
+                        <img src="images/hnaZoilaJ.jpg" class="testimony_img">
+                    </figure>
+                </section>
+
                 <img src="images/arrowright.svg" class="testimony_arrow" id="after">
             </div>
         </section>
