--- a/test/test9.html
+++ b/test/test9.html
@@ -20,7 +20,7 @@
             <div class="testimonial-info">
                 <h2>Joaquin Andres Muñoz San Martin</h2>
                 <p>Run: 21.671.031-2</p>
-                <p>Estado: Miembro en Plena comunión</p>
+                <p>Estado: Miembro Probando</p>
                 <p>Templo: Iglesia Evangélica Pentecostal, Cabrero</p>
                 <p>Dirección: Anibal Pinto N°385</p>
             </div>
