--- a/index.html
+++ b/index.html
@@ -216,6 +216,30 @@
                     </figure>
                 </section>
 
+                <section class="testimony_body" data-id="11">
+                    <div class="testimony_text">
+                        <h2 class="subtitle">Hermano Salomón Gerónimo. <span class="testimony_course">Colaborador de MEEC</span></h2>
+                        <p class="testimony_review">Hermano dispuesto como colaborador dentro de los servicios MEEC para predicar la palabra de Dios</p>
+                        <a href="test/test11.html" class="cta">Ver Mas</a>
+                    </div>
+
+                    <figure class="testimony_picture">
+                        <img src="images/.jpg" class="testimony_img">
+                    </figure>
+                </section>
+
+                <section class="testimony_body" data-id="12">
+                    <div class="testimony_text">
+                        <h2 class="subtitle">Hermana Maciel Castillo <span class="testimony_course">Colaborador de MEEC</span></h2>
+                        <p class="testimony_review">Hermana dispuesta como colaboradora dentro de los servicios MEEC para predicar la palabra de Dios</p>
+                        <a href="test/test12.html" class="cta">Ver Mas</a>
+                    </div>
+
+                    <figure class="testimony_picture">
+                        <img src="images/.jpg" class="testimony_img">
+                    </figure>
+                </section>
+
                 <img src="images/arrowright.svg" class="testimony_arrow" id="after">
             </div>
         </section>
