--- a/test/test10.html
+++ b/test/test10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hno Joaquin Muñoz S.M.</title>
+    <title>Hna Zoila Jofre S.</title>
     <link rel="shortcut icon" href="../images/icono.png" type="image/x-icon">
     <link rel="stylesheet" href="test5.css"> <!-- Asegúrate de tener tu archivo CSS enlazado -->
 </head>
