--- a/index.html
+++ b/index.html
@@ -230,9 +230,21 @@
 
                 <section class="testimony_body" data-id="12">
                     <div class="testimony_text">
-                        <h2 class="subtitle">Hermana Maciel Castillo <span class="testimony_course">Colaborador de MEEC</span></h2>
+                        <h2 class="subtitle">Hermana Maciel Castillo. <span class="testimony_course">Colaborador de MEEC</span></h2>
                         <p class="testimony_review">Hermana dispuesta como colaboradora dentro de los servicios MEEC para predicar la palabra de Dios</p>
                         <a href="test/test12.html" class="cta">Ver Mas</a>
+                    </div>
+
+                    <figure class="testimony_picture">
+                        <img src="images/.jpg" class="testimony_img">
+                    </figure>
+                </section>
+
+                <section class="testimony_body" data-id="12">
+                    <div class="testimony_text">
+                        <h2 class="subtitle">Hermana Elisa Escobar. <span class="testimony_course">Colaborador de MEEC</span></h2>
+                        <p class="testimony_review">Hermana dispuesta como colaboradora dentro de los servicios MEEC para predicar la palabra de Dios</p>
+                        <a href="test/test13.html" class="cta">Ver Mas</a>
                     </div>
 
                     <figure class="testimony_picture">
@@ -276,5 +288,6 @@
     </footer>
 
     <script src="js/slider.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 </html>
